# gekkemieren

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.toml
.github/workflows/: ci.yml
docs/: experiments.md
src/: ant.rs  app.rs  camera.rs  color_scheme.rs  config.rs  food.rs  lib.rs  main.rs  pheromone.rs  pipeline.rs  screenshot.rs  shader.rs  shader.wgsl  spawn.rs  texture.rs  wgpu_setup.rs
src/shaders/: compute.wgsl  food_render.wgsl  hud.wgsl  pheromone_decay.wgsl  pheromone_render.wgsl  render.wgsl
tests/: simulation.rs
tests/common/: mod.rs
