[package]
name = "gekkemieren"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gekkemieren"
path = "src/main.rs"

[[bin]]
name = "debug_colors"
path = "src/bin/debug_colors.rs"

[dependencies]
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["derive"] }
chrono = "0.4"
env_logger = "0.11.10"
log = "0.4.29"
png = "0.17"
pollster = "0.4.0"
rand = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
wgpu = "29.0.1"
winit = "0.30.13"
